--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-vue-star-rating",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A Star rating UI component for nativescript vue",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,9 @@
   ],
   "author": "Pablo nieto (panietoar@gmail.com)",
   "license": "MIT",
+  "peerDependencies": {
+    "tns-core-modules": "*"
+  },
   "bugs": {
     "url": "https://github.com/panietoar/nativescript-vue-star-rating/issues"
   },
